--- a/code/learn/1.allocation.ipynb
+++ b/code/learn/1.allocation.ipynb
@@ -38,7 +38,9 @@
     }
    ],
    "source": [
-    "@btime 1;"
+    "@btime 1\n",
+    "\n",
+    ";"
    ]
   },
   {
@@ -56,7 +58,9 @@
     }
    ],
    "source": [
-    "@btime 'a';"
+    "@btime 'a'\n",
+    "\n",
+    ";"
    ]
   },
   {
@@ -74,7 +78,9 @@
     }
    ],
    "source": [
-    "@btime \"a\";"
+    "@btime \"a\"\n",
+    "\n",
+    ";"
    ]
   },
   {
@@ -92,7 +98,9 @@
     }
    ],
    "source": [
-    "@btime ();"
+    "@btime ()\n",
+    "\n",
+    ";"
    ]
   },
   {
@@ -118,7 +126,9 @@
     }
    ],
    "source": [
-    "@btime [];"
+    "@btime []\n",
+    "\n",
+    ";"
    ]
   },
   {
@@ -136,7 +146,9 @@
     }
    ],
    "source": [
-    "@btime Set();"
+    "@btime Set()\n",
+    "\n",
+    ";"
    ]
   },
   {
@@ -154,7 +166,9 @@
     }
    ],
    "source": [
-    "@btime Dict();"
+    "@btime Dict()\n",
+    "\n",
+    ";"
    ]
   },
   {
@@ -180,7 +194,9 @@
     }
    ],
    "source": [
-    "@btime Char[];"
+    "@btime Char[]\n",
+    "\n",
+    ";"
    ]
   },
   {
@@ -198,7 +214,9 @@
     }
    ],
    "source": [
-    "@btime Set{Float64}();"
+    "@btime Set{Float64}()\n",
+    "\n",
+    ";"
    ]
   },
   {
@@ -216,7 +234,9 @@
     }
    ],
    "source": [
-    "@btime Dict{String, Int}();"
+    "@btime Dict{String, Int}()\n",
+    "\n",
+    ";"
    ]
   },
   {
@@ -242,7 +262,9 @@
     }
    ],
    "source": [
-    "@btime (1,2,3,4,5,6,7,8,9,10);"
+    "@btime (1,2,3,4,5,6,7,8,9,10)\n",
+    "\n",
+    ";"
    ]
   },
   {
@@ -268,7 +290,9 @@
     }
    ],
    "source": [
-    "@btime [1,2,3,4,5,6,7,8,9,10];"
+    "@btime [1,2,3,4,5,6,7,8,9,10]\n",
+    "\n",
+    ";"
    ]
   }
  ],
