--- a/code/learn/2.container.ipynb
+++ b/code/learn/2.container.ipynb
@@ -44,7 +44,9 @@
     }
    ],
    "source": [
-    "@btime ();"
+    "@btime ()\n",
+    "\n",
+    ";"
    ]
   },
   {
@@ -72,7 +74,9 @@
     }
    ],
    "source": [
-    "@btime tuple(1)"
+    "@btime tuple(1)\n",
+    "\n",
+    ";"
    ]
   },
   {
@@ -101,7 +105,7 @@
     }
    ],
    "source": [
-    "Tuple([1,2])"
+    "Tuple((1,2))"
    ]
   },
   {
@@ -184,7 +188,9 @@
     }
    ],
    "source": [
-    "@btime Tuple(1)"
+    "@btime Tuple(1)\n",
+    "\n",
+    ";"
    ]
   },
   {
@@ -254,7 +260,9 @@
     }
    ],
    "source": [
-    "@btime Any[]"
+    "@btime Any[]\n",
+    "\n",
+    ";"
    ]
   },
   {
@@ -272,7 +280,9 @@
     }
    ],
    "source": [
-    "@btime Int[];"
+    "@btime Int[]\n",
+    "\n",
+    ";"
    ]
   },
   {
@@ -290,7 +300,9 @@
     }
    ],
    "source": [
-    "@btime Float64[];"
+    "@btime Float64[]\n",
+    "\n",
+    ";"
    ]
   },
   {
@@ -308,7 +320,9 @@
     }
    ],
    "source": [
-    "@btime Float32[];"
+    "@btime Float32[]\n",
+    "\n",
+    ";"
    ]
   },
   {
@@ -326,7 +340,9 @@
     }
    ],
    "source": [
-    "@btime Char[];"
+    "@btime Char[]\n",
+    "\n",
+    ";"
    ]
   },
   {
@@ -362,7 +378,9 @@
     }
    ],
    "source": [
-    "@btime String[]"
+    "@btime String[]\n",
+    "\n",
+    ";"
    ]
   }
  ],
