--- a/code/learn/3.letter.ipynb
+++ b/code/learn/3.letter.ipynb
@@ -118,7 +118,7 @@
     "    \n",
     "    println(sizeof(st))\n",
     "\n",
-    "end\n"
+    "end"
    ]
   },
   {
@@ -158,7 +158,9 @@
     "\n",
     "ys = ('a', 'b', 'c', 'd', 'e')\n",
     "\n",
-    "@btime all(x in $ys for x in $xs)"
+    "@btime all(x in $ys for x in $xs)\n",
+    "\n",
+    ";"
    ]
   },
   {
@@ -190,7 +192,9 @@
     "\n",
     "ys = (\"a\", \"b\", \"c\", \"d\", \"e\")\n",
     "\n",
-    "@btime all(x in $ys for x in $xs)"
+    "@btime all(x in $ys for x in $xs)\n",
+    "\n",
+    ";"
    ]
   }
  ],
