--- a/code/learn/4.unique.ipynb
+++ b/code/learn/4.unique.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "ch_ = [Char(i[1]) for i in in_]\n",
     "\n",
-    "st_ = string.(in_)\n",
+    "st_ = string.(in_);\n",
     "\n",
     ";"
    ]
