--- a/code/learn/6.sum_iterable.ipynb
+++ b/code/learn/6.sum_iterable.ipynb
@@ -32,14 +32,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  133.655 ns (0 allocations: 0 bytes)\n",
-      "  133.952 ns (0 allocations: 0 bytes)\n"
+      "  134.112 ns (0 allocations: 0 bytes)\n",
+      "  134.143 ns (0 allocations: 0 bytes)\n"
      ]
     }
    ],
    "source": [
-    "@btime count(nu == 1 for nu in $nu_);\n",
-    "@btime count((nu == 1 for nu in $nu_));"
+    "@btime sum(nu == 1 for nu in $nu_)\n",
+    "\n",
+    "@btime sum((nu == 1 for nu in $nu_))\n",
+    "\n",
+    ";"
    ]
   },
   {
@@ -60,12 +63,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  283.424 ns (1 allocation: 1.06 KiB)\n"
+      "  284.011 ns (1 allocation: 1.06 KiB)\n"
      ]
     }
    ],
    "source": [
-    "@btime count([nu == 1 for nu in $nu_]);"
+    "@btime sum([nu == 1 for nu in $nu_])\n",
+    "\n",
+    ";"
    ]
   },
   {
@@ -74,7 +79,7 @@
    "metadata": {},
    "source": [
     "Mapping a function allocates.\n",
-    "But letting `count` chain this mapping speeds up the computation;"
+    "But letting `sum` chain this mapping speeds up the computation;"
    ]
   },
   {
@@ -87,17 +92,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  380.283 ns (1 allocation: 1.06 KiB)\n",
-      "  134.064 ns (0 allocations: 0 bytes)\n",
-      "  134.064 ns (0 allocations: 0 bytes)\n"
+      "  382.353 ns (1 allocation: 1.06 KiB)\n",
+      "  137.069 ns (0 allocations: 0 bytes)\n",
+      "  135.823 ns (0 allocations: 0 bytes)\n"
      ]
     }
    ],
    "source": [
-    "@btime count(map(==(1), $nu_));\n",
+    "@btime sum(map(==(1), $nu_))\n",
     "\n",
-    "@btime count(==(1), $nu_);\n",
-    "@btime count(nu -> nu==1, $nu_);"
+    "@btime sum(==(1), $nu_)\n",
+    "\n",
+    "@btime sum(nu -> nu==1, $nu_)\n",
+    "\n",
+    ";"
    ]
   },
   {
@@ -118,15 +126,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  223.769 ns (1 allocation: 7.94 KiB)\n",
-      "  237.553 ns (1 allocation: 7.94 KiB)\n"
+      "  232.234 ns (1 allocation: 7.94 KiB)\n",
+      "  236.856 ns (1 allocation: 7.94 KiB)\n"
      ]
     }
    ],
    "source": [
-    "@btime $nu_ .* 1 ./ 2 .+ 3 .- 4 .^ 5;\n",
+    "@btime $nu_ .* 1 ./ 2 .+ 3 .- 4 .^ 5\n",
     "\n",
-    "@btime [nu * 1 / 2 + 3 - 4 ^ 5 for nu in $nu_];"
+    "@btime [nu * 1 / 2 + 3 - 4 ^ 5 for nu in $nu_]\n",
+    "\n",
+    ";"
    ]
   },
   {
@@ -134,12 +144,12 @@
    "id": "4b0200d9-d3cf-41ff-9a6c-faadf102441e",
    "metadata": {},
    "source": [
-    "But vectorization is slow here because it makes a `BitVector` instead of `Vector{Bool}`, which is denser and faster;"
+    "But vectorization is slow here because it makes a `BitVector` instead of `Vector{Bool}`, where the former is slower to make, smaller, and faster to compute on;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "98ecbaf2-dd50-4bf9-ab7d-fc9d0aa8b8b9",
    "metadata": {},
    "outputs": [
@@ -147,54 +157,70 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  415.201 ns (3 allocations: 4.41 KiB)\n"
+      "  417.714 ns (3 allocations: 4.41 KiB)\n"
      ]
     }
    ],
    "source": [
-    "@btime count($nu_ .== 1);"
+    "@btime sum($nu_ .== 1)\n",
+    "\n",
+    ";"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "cc80ebc6-75ca-43e3-9109-a069e1febee6",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(Vector{Bool}, DenseVector{Bool}, AbstractVector{Bool}, Any)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(Vector{Bool}, DenseVector{Bool}, AbstractVector{Bool}, Any)\n",
+      "1000\n",
+      "  27.470 ns (0 allocations: 0 bytes)\n"
+     ]
     }
    ],
    "source": [
-    "supertypes(typeof([nu == 1 for nu in nu_]))"
+    "bo_ = [nu == 1 for nu in nu_]\n",
+    "\n",
+    "println(supertypes(typeof(bo_)))\n",
+    "\n",
+    "println(sizeof(bo_))\n",
+    "\n",
+    "@btime sum($bo_)\n",
+    "\n",
+    ";"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "dcde668c-a158-4cae-8faf-d0350313560d",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(BitVector, AbstractVector{Bool}, Any)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "128\n",
+      "(BitVector, AbstractVector{Bool}, Any)\n",
+      "  4.875 ns (0 allocations: 0 bytes)\n"
+     ]
     }
    ],
    "source": [
-    "supertypes(typeof(nu_ .== 1))"
+    "bi_ = nu_ .== 1\n",
+    "\n",
+    "println(sizeof(bi_))\n",
+    "\n",
+    "println(supertypes(typeof(bi_)))\n",
+    "\n",
+    "@btime sum($bi_)\n",
+    "\n",
+    ";"
    ]
   },
   {
@@ -204,7 +230,7 @@
    "source": [
     "Generators are usually the best.\n",
     "\n",
-    "Unless there is a specific function, which is `count(function, container)` here.\n",
+    "Unless there is a specific function, which is `sum(function, container)` here.\n",
     "\n",
     "Check vectorization intermediate types."
    ]
