--- a/code/learn/02.profile.ipynb
+++ b/code/learn/02.profile.ipynb
@@ -68,7 +68,7 @@
     }
    ],
    "source": [
-    "# The function form of the code behaves the same.\n",
+    "# The function forms of the code behave the same.\n",
     "\n",
     "@btime fu(10)\n",
     "\n",
@@ -103,7 +103,7 @@
     }
    ],
    "source": [
-    "# Profile allocation with the smaller vector.\n",
+    "# Profile allocations from using the smaller vector.\n",
     "\n",
     "Profile.Allocs.clear()\n",
     "\n",
@@ -138,8 +138,8 @@
     }
    ],
    "source": [
-    "# The bigger vector.\n",
-    "# The extra allocation seems to be coming from a temporary buffer vector during `collect`.\n",
+    "# Profile allocations from using the bigger vector.\n",
+    "# The extra allocation seems to be coming from `collect` making a temporary buffer vector.\n",
     "\n",
     "Profile.Allocs.clear()\n",
     "\n",
