--- a/code/learn/03.allocation.ipynb
+++ b/code/learn/03.allocation.ipynb
@@ -19,9 +19,9 @@
     "\n",
     "1. Type unstable objects need to be heap allocated because they are `Box`ed, which needs allocation.\n",
     "    \n",
-    "2. Dynamically sized objects (`String`, `Array`, etc) need to be heap allocated, but sometimes their allocations are eliminated (no gurantee and profiling is the only way to be certain).\n",
+    "2. Dynamically sized objects (`String`, `Array`, etc) need to be heap allocated, but sometimes their allocations are eliminated (no guarantee and profiling is the only way to be certain).\n",
     "    \n",
-    "3. Mutable objects that escape their original scope need to be allocated, because their changes need to be visible by everything that has an access to them.\n",
+    "3. Mutable objects that escape their original scope need to be allocated because their changes need to be visible to everything that has an access to them.\n",
     "\n",
     "These are just mental steps of debugging when looking allocations, as a preliminary \"first guess\" of what might be the problem before focusing analysis efforts on a specific part."
    ]
