--- a/code/learn/09.unique.ipynb
+++ b/code/learn/09.unique.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "16f27f45-f1f4-4083-8769-a981bdafa0a5",
    "metadata": {},
    "outputs": [],
@@ -22,18 +22,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0303c889-3723-42ce-a6e9-f2413e96f6d8",
+   "id": "66a9a55f-1783-4856-b26c-3a92c310eb31",
    "metadata": {},
    "source": [
-    "`Int`, the smallest concrete type here, is the fastest: \n",
-    "\n",
-    "`String` is not concrete only after one is created and the computer knows its size, so it is slow to work with:"
+    "`Int`, the smallest concrete type here, is the fastest. \n",
+    "`String` is not concrete only after one is created and the computer knows its size, so it is slow to work with."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "66f39dfc-fe75-4f2f-a8f5-4788456cefc2",
+   "execution_count": 10,
+   "id": "a4f5e67d-4774-4d4b-9937-fdbaf3674ae4",
    "metadata": {},
    "outputs": [
     {
@@ -67,26 +66,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a9f7663-dc4c-4920-a44d-687bf4559b4d",
+   "id": "5e0869b1-783d-4bd1-9897-92f97d0af0c4",
    "metadata": {},
    "source": [
-    "`unique` allocates the most, so it is the slowest (avoid it):"
+    "`unique` allocates the most, and it is the slowest (avoid it)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "968062ad-1162-401a-b14f-576e0569bf19",
+   "execution_count": 4,
+   "id": "ad9d30b3-981b-4159-9a68-92ff0575b21e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  196.645 ns (7 allocations: 880 bytes)\n",
-      "  226.832 ns (7 allocations: 880 bytes)\n",
-      "  197.196 ns (7 allocations: 624 bytes)\n",
-      "  401.328 ns (7 allocations: 848 bytes)\n"
+      "  26.916 μs (23 allocations: 71.00 KiB)\n",
+      "  34.292 μs (23 allocations: 71.00 KiB)\n",
+      "  30.209 μs (22 allocations: 38.92 KiB)\n",
+      "  50.292 μs (23 allocations: 70.97 KiB)\n"
      ]
     }
    ],
@@ -104,26 +103,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9b86f13-7c96-4b40-9009-13e4921ff6b7",
+   "id": "eaea785d-863d-42fa-922f-e1dced80beec",
    "metadata": {},
    "source": [
-    "`Set` always allocates 7 times and is faster:"
+    "`Set` always allocates 4 times and is faster."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "7830f591-49df-451a-b7f7-00949681b142",
+   "execution_count": 5,
+   "id": "bc53e1d9-c0bb-40c3-8bfe-3a8e47dd70d8",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  98.865 ns (4 allocations: 400 bytes)\n",
-      "  127.690 ns (4 allocations: 400 bytes)\n",
-      "  102.533 ns (4 allocations: 336 bytes)\n",
-      "  197.285 ns (4 allocations: 384 bytes)\n"
+      "  6.017 μs (7 allocations: 18.59 KiB)\n",
+      "  9.959 μs (7 allocations: 18.59 KiB)\n",
+      "  6.183 μs (7 allocations: 10.52 KiB)\n",
+      "  21.292 μs (7 allocations: 18.57 KiB)\n"
      ]
     }
    ],
@@ -141,28 +140,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1305d89-8b27-4b4b-aef7-2d9dfa10757b",
+   "id": "ec22e7d0-3280-40eb-97f0-12bd2a7a4523",
    "metadata": {},
    "source": [
     "`unique!` allocates 0 for the number types and more than 7 for the letter types.\n",
-    "\n",
-    "So it is the fastest for working with the numbers and slower than `Set` for the letters:"
+    "So it is the fastest for working with the numbers and slower than `Set` for the letters."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "600d06bb-2908-40cc-abcd-12266b7a9c51",
+   "execution_count": 11,
+   "id": "d8361564-cd72-4e99-9555-a8b26644785d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  18.202 ns (0 allocations: 0 bytes)\n",
-      "  24.389 ns (0 allocations: 0 bytes)\n",
-      "  123.846 ns (4 allocations: 336 bytes)\n",
-      "  350.467 ns (4 allocations: 384 bytes)\n"
+      "  1.275 μs (0 allocations: 0 bytes)\n",
+      "  2.250 μs (0 allocations: 0 bytes)\n",
+      "  11.708 μs (16 allocations: 27.86 KiB)\n",
+      "  45.875 μs (17 allocations: 49.12 KiB)\n"
      ]
     }
    ],
@@ -180,40 +178,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cee071d6-bcf6-4960-8172-68f0872788ff",
+   "id": "56ae4327-f18a-4abf-8d77-233e535e1b30",
    "metadata": {},
    "source": [
-    "`Set` is the fastest for working with `Char` and `String`.\n",
-    "\n",
-    "`unique!` is the fastest for working with `Int` and `Float64`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "48618646-a022-4ee4-8c6d-12e28ea7fbfe",
-   "metadata": {},
-   "source": [
-    "However, the content matters.\n",
-    "\n",
-    "Contents with repeats slow down `Set` more:"
+    "However, contents with repeats slow down `Set` more."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "1f79922c-eaab-4f23-a4f5-61853ed54157",
+   "execution_count": null,
+   "id": "3dd23e89-f6e4-4b3d-a349-ffd0db7788ec",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  21.792 μs (7 allocations: 880 bytes)\n",
-      "  29.791 μs (7 allocations: 144.59 KiB)\n",
-      "  18.202 ns (0 allocations: 0 bytes)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "inr_ = repeat(1:10, n)\n",
     "\n",
@@ -224,6 +200,22 @@
     "@btime unique!($inr_)\n",
     "\n",
     ";"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a383d30d-eac1-4b0f-a2c7-225a9736c820",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74e3c7e8-76b8-49bb-b510-50f3cceb72a7",
+   "metadata": {},
+   "source": [
+    "`unique!` is the best because it is a function and it is less dependent on the content."
    ]
   }
  ],
