--- a/code/learn/11.fill.ipynb
+++ b/code/learn/11.fill.ipynb
@@ -5,20 +5,9 @@
    "execution_count": 1,
    "id": "2e6269ab-cb15-4541-9fb0-80f554c631c7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1000, 1000)"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "n = 10^3\n",
+    "n = 10^2\n",
     "\n",
     "si = (n, n)\n",
     "\n",
@@ -35,17 +24,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  350.939 ns (1 allocation: 7.94 KiB)\n",
-      "  186.274 ns (1 allocation: 7.94 KiB)\n",
-      "  70.791 μs (2 allocations: 7.63 MiB)\n",
-      "  70.375 μs (2 allocations: 7.63 MiB)\n"
+      "  33.064 ns (1 allocation: 896 bytes)\n",
+      "  32.495 ns (1 allocation: 896 bytes)\n",
+      "  851.667 ns (2 allocations: 78.17 KiB)\n",
+      "  843.750 ns (2 allocations: 78.17 KiB)\n"
      ]
     }
    ],
    "source": [
-    "@btime fill(0.0, n)\n",
+    "@btime fill(0.0, $n)\n",
     "\n",
-    "@btime zeros(n)\n",
+    "@btime zeros($n)\n",
     "\n",
     "@btime fill(0.0, $si)\n",
     "\n",
@@ -64,17 +53,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  197.514 ns (1 allocation: 7.94 KiB)\n",
-      "  252.371 ns (1 allocation: 7.94 KiB)\n",
-      "  261.708 μs (2 allocations: 7.63 MiB)\n",
-      "  261.875 μs (2 allocations: 7.63 MiB)\n"
+      "  32.655 ns (1 allocation: 896 bytes)\n",
+      "  32.663 ns (1 allocation: 896 bytes)\n",
+      "  828.667 ns (2 allocations: 78.17 KiB)\n",
+      "  851.107 ns (2 allocations: 78.17 KiB)\n"
      ]
     }
    ],
    "source": [
-    "@btime fill(0, n)\n",
+    "@btime fill(0, $n)\n",
     "\n",
-    "@btime zeros(Int, n)\n",
+    "@btime zeros(Int, $n)\n",
     "\n",
     "@btime fill(0, $si)\n",
     "\n",
@@ -93,17 +82,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  206.920 ns (1 allocation: 7.94 KiB)\n",
-      "  365.966 ns (1 allocation: 7.94 KiB)\n",
-      "  126.958 μs (2 allocations: 7.63 MiB)\n",
-      "  311.000 μs (2 allocations: 7.63 MiB)\n"
+      "  32.035 ns (1 allocation: 896 bytes)\n",
+      "  31.993 ns (1 allocation: 896 bytes)\n",
+      "  1.125 μs (2 allocations: 78.17 KiB)\n",
+      "  1.100 μs (2 allocations: 78.17 KiB)\n"
      ]
     }
    ],
    "source": [
-    "@btime fill(1.0, n)\n",
+    "@btime fill(1.0, $n)\n",
     "\n",
-    "@btime ones(n)\n",
+    "@btime ones($n)\n",
     "\n",
     "@btime fill(1.0, $si)\n",
     "\n",
@@ -122,23 +111,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  201.069 ns (1 allocation: 7.94 KiB)\n",
-      "  298.430 ns (1 allocation: 7.94 KiB)\n",
-      "  550.750 μs (2 allocations: 7.63 MiB)\n",
-      "  127.542 μs (2 allocations: 7.63 MiB)\n"
+      "  32.538 ns (1 allocation: 896 bytes)\n",
+      "  33.300 ns (1 allocation: 896 bytes)\n",
+      "  1.183 μs (2 allocations: 78.17 KiB)\n",
+      "  1.141 μs (2 allocations: 78.17 KiB)\n"
      ]
     }
    ],
    "source": [
-    "@btime fill(1, n)\n",
+    "@btime fill(1, $n)\n",
     "\n",
-    "@btime ones(Int, n)\n",
+    "@btime ones(Int, $n)\n",
     "\n",
     "@btime fill(1, $si)\n",
     "\n",
     "@btime ones(Int, $si)\n",
     "\n",
     ";"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de0364df-6aa4-439e-aa39-2454501b160d",
+   "metadata": {},
+   "source": [
+    "Use more speicfic `zeros` and `ones` instead of `fill` to make an array.\n",
+    "\n",
+    "Pre-allocating and using `fill!` is even better."
    ]
   }
  ],
