--- a/code/learn/13.array_and_tuple.ipynb
+++ b/code/learn/13.array_and_tuple.ipynb
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0688a279-27fd-4dde-be25-130f8f6deacf",
+   "id": "5b77881e-fe28-4c2a-8269-73240d3cc2bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,12 +127,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  41.583 μs (1000 allocations: 54.70 KiB)\n",
-      "  211.917 μs (1000 allocations: 93.07 KiB)\n",
-      "  19.417 μs (1000 allocations: 54.70 KiB)\n",
-      "  30.083 μs (1000 allocations: 93.07 KiB)\n",
-      "  19.584 μs (1000 allocations: 54.70 KiB)\n",
-      "  30.041 μs (1000 allocations: 93.07 KiB)\n"
+      "  40.083 μs (1000 allocations: 54.70 KiB)\n",
+      "  212.125 μs (1000 allocations: 93.01 KiB)\n",
+      "  18.500 μs (1000 allocations: 54.70 KiB)\n",
+      "  29.708 μs (1000 allocations: 93.01 KiB)\n",
+      "  18.375 μs (1000 allocations: 54.70 KiB)\n",
+      "  30.125 μs (1000 allocations: 93.01 KiB)\n"
      ]
     }
    ],
@@ -168,7 +168,7 @@
    "id": "d3f0b7e3-8673-4e14-8be0-39896412db91",
    "metadata": {},
    "source": [
-    "But using `Tuple` makes every variation as fast because the compiler knows the what (concrete and immutable objects) are coming and optimizes the code equally;"
+    "But using `Tuple` makes every variation as fast because the compiler knows that a `Tuple` is concrete and immutable."
    ]
   },
   {
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "50fd4d59-0387-4113-8aad-e4d278a2882a",
    "metadata": {},
    "outputs": [
@@ -206,10 +206,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "  17.125 μs (1000 allocations: 54.70 KiB)\n",
+      "  28.583 μs (1000 allocations: 93.01 KiB)\n",
+      "  17.125 μs (1000 allocations: 54.70 KiB)\n",
+      "  28.625 μs (1000 allocations: 93.01 KiB)\n",
       "  17.250 μs (1000 allocations: 54.70 KiB)\n",
-      "  28.791 μs (1000 allocations: 93.07 KiB)\n",
-      "  17.500 μs (1000 allocations: 54.70 KiB)\n",
-      "  28.916 μs (1000 allocations: 93.07 KiB)\n"
+      "  28.667 μs (1000 allocations: 93.01 KiB)\n"
      ]
     }
    ],
@@ -235,7 +237,7 @@
    "metadata": {},
    "source": [
     "Use `Tuple`s more.\n",
-    "Use concrete and immutable objects."
+    "Be type stable."
    ]
   }
  ],
