--- a/code/learn/15.map.ipynb
+++ b/code/learn/15.map.ipynb
@@ -19,12 +19,12 @@
    "id": "1a5a4e1c-d78e-4e6e-8910-d2a76de169eb",
    "metadata": {},
    "source": [
-    "Generators do not alloacte;"
+    "Generators do not alloacte."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "b7a4eac3-e7b5-4c41-a22e-6badb348ec09",
    "metadata": {},
    "outputs": [
@@ -32,15 +32,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  134.112 ns (0 allocations: 0 bytes)\n",
       "  134.143 ns (0 allocations: 0 bytes)\n"
      ]
     }
    ],
    "source": [
     "@btime sum(nu == 1 for nu in $nu_)\n",
-    "\n",
-    "@btime sum((nu == 1 for nu in $nu_))\n",
     "\n",
     ";"
    ]
@@ -50,12 +47,12 @@
    "id": "b644bb1f-990f-43ec-9ed3-e33ca2cced59",
    "metadata": {},
    "source": [
-    "Making a vector object results in an unnecessary allocation;"
+    "Making a vector object results in an unnecessary allocation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "67fd81d2-12ce-4f58-96e4-0c3e6ddab8a5",
    "metadata": {},
    "outputs": [
@@ -63,7 +60,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  284.011 ns (1 allocation: 1.06 KiB)\n"
+      "  303.450 ns (1 allocation: 1.06 KiB)\n"
      ]
     }
    ],
@@ -79,12 +76,12 @@
    "metadata": {},
    "source": [
     "Mapping a function allocates.\n",
-    "But letting `sum` chain this mapping speeds up the computation;"
+    "But letting `sum` chain this mapping speeds up the computation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "b9558353-f808-4390-a99f-a891c431500a",
    "metadata": {},
    "outputs": [
@@ -92,9 +89,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  382.353 ns (1 allocation: 1.06 KiB)\n",
-      "  137.069 ns (0 allocations: 0 bytes)\n",
-      "  135.823 ns (0 allocations: 0 bytes)\n"
+      "  397.801 ns (1 allocation: 1.06 KiB)\n",
+      "  137.111 ns (0 allocations: 0 bytes)\n"
      ]
     }
    ],
@@ -102,8 +98,6 @@
     "@btime sum(map(==(1), $nu_))\n",
     "\n",
     "@btime sum(==(1), $nu_)\n",
-    "\n",
-    "@btime sum(nu -> nu==1, $nu_)\n",
     "\n",
     ";"
    ]
@@ -113,12 +107,12 @@
    "id": "026075c0-459b-4dad-b37f-b3beb6a266cb",
    "metadata": {},
    "source": [
-    "Vectorization is usually fast;"
+    "Vectorization is usually fast."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "b6bbdba8-8f63-401b-aa15-06886b9485bc",
    "metadata": {},
    "outputs": [
@@ -126,8 +120,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  232.234 ns (1 allocation: 7.94 KiB)\n",
-      "  236.856 ns (1 allocation: 7.94 KiB)\n"
+      "  232.868 ns (1 allocation: 7.94 KiB)\n",
+      "  247.361 ns (1 allocation: 7.94 KiB)\n"
      ]
     }
    ],
@@ -144,12 +138,12 @@
    "id": "4b0200d9-d3cf-41ff-9a6c-faadf102441e",
    "metadata": {},
    "source": [
-    "But vectorization is slow here because it makes a `BitVector` instead of `Vector{Bool}`, where the former is slower to make, smaller, and faster to compute on;"
+    "But vectorization is slow here because it makes a `BitVector` instead of `Vector{Bool}`, where the former is slower to make, smaller, and faster to compute on."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "98ecbaf2-dd50-4bf9-ab7d-fc9d0aa8b8b9",
    "metadata": {},
    "outputs": [
@@ -157,7 +151,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  417.714 ns (3 allocations: 4.41 KiB)\n"
+      "  454.107 ns (3 allocations: 4.41 KiB)\n"
      ]
     }
    ],
@@ -169,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "cc80ebc6-75ca-43e3-9109-a069e1febee6",
    "metadata": {},
    "outputs": [
@@ -179,7 +173,7 @@
      "text": [
       "(Vector{Bool}, DenseVector{Bool}, AbstractVector{Bool}, Any)\n",
       "1000\n",
-      "  27.470 ns (0 allocations: 0 bytes)\n"
+      "  27.513 ns (0 allocations: 0 bytes)\n"
      ]
     }
    ],
@@ -197,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "dcde668c-a158-4cae-8faf-d0350313560d",
    "metadata": {},
    "outputs": [
@@ -205,8 +199,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "128\n",
       "(BitVector, AbstractVector{Bool}, Any)\n",
+      "128\n",
       "  4.875 ns (0 allocations: 0 bytes)\n"
      ]
     }
@@ -214,9 +208,9 @@
    "source": [
     "bi_ = nu_ .== 1\n",
     "\n",
-    "println(sizeof(bi_))\n",
-    "\n",
     "println(supertypes(typeof(bi_)))\n",
+    "\n",
+    "println(sizeof(bi_))\n",
     "\n",
     "@btime sum($bi_)\n",
     "\n",
@@ -228,9 +222,7 @@
    "id": "956ac6e2-6bda-4fa6-9794-ac48204c348e",
    "metadata": {},
    "source": [
-    "Generators are usually the best.\n",
-    "\n",
-    "Unless there is a specific function, which is `sum(function, container)` here.\n",
+    "Generators are usually the best, but prefer a specific function like `sum(function, container)`.\n",
     "\n",
     "Check vectorization intermediate types."
    ]
