--- a/code/learn/10.scope.ipynb
+++ b/code/learn/10.scope.ipynb
@@ -5,7 +5,7 @@
    "id": "67bb00d2-d5d2-45ad-87c7-b4efaae54c31",
    "metadata": {},
    "source": [
-    "`for` loop creates a private block, whose variables can not be seen by the parent block;"
+    "`for` loop creates a private block, whose variables can not be seen by its parent block."
    ]
   },
   {
@@ -32,7 +32,7 @@
     }
    ],
    "source": [
-    "for _ in 1:2\n",
+    "for _ in 1:1\n",
     "    \n",
     "    va = 1\n",
     "    \n",
@@ -69,7 +69,7 @@
    "source": [
     "function fu1()\n",
     "    \n",
-    "    for _ in 1:2\n",
+    "    for _ in 1:1\n",
     "\n",
     "        va = 1\n",
     "\n",
@@ -110,7 +110,7 @@
    "source": [
     "function fu2()\n",
     "    \n",
-    "    for va in 1:2\n",
+    "    for va in 1:1\n",
     "\n",
     "    end\n",
     "    \n",
@@ -123,23 +123,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5c4acd4-d46d-4fd8-a669-f4ff73af10ba",
+   "id": "a4feb796-1e5d-48eb-81f7-e12a45981d5b",
    "metadata": {},
    "source": [
-    "Although `va` is never accessed, the compiler sees it in the parent block.\n",
-    "The compiler wants to avoid error so it infers `va` from the one computed in the child block;"
+    "The compiler sees variable `va` even though it is not assigned, gets ready to use it, and refers to it in its and its children's blocks.\n",
+    "However, if it is not assigned, updating or returning it errors."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6e011333-d3cc-4bf2-b363-be7c43593690",
+   "id": "d4ac28c5-20a7-4c91-bc7a-d224f9776683",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "fu3 (generic function with 1 method)"
       ]
      },
      "execution_count": 4,
@@ -148,110 +148,7 @@
     }
    ],
    "source": [
-    "function fu3()\n",
-    "    \n",
-    "    if false\n",
-    "    \n",
-    "        va = 0\n",
-    "        \n",
-    "    end\n",
-    "    \n",
-    "    for _ in 1:2\n",
-    "\n",
-    "        va = 1\n",
-    "\n",
-    "    end\n",
-    "    \n",
-    "    va\n",
-    "    \n",
-    "end\n",
-    "\n",
-    "fu3()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "678dff62-d21c-47be-90fe-153e8416682f",
-   "metadata": {},
-   "source": [
-    "If the child block does not compute `va` then the code errors;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "5959015b-30a7-484c-875b-567715aaffa6",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "UndefVarError: va not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: va not defined",
-      "",
-      "Stacktrace:",
-      " [1] fu3n()",
-      "   @ Main ./In[11]:15",
-      " [2] top-level scope",
-      "   @ In[11]:19",
-      " [3] eval",
-      "   @ ./boot.jl:368 [inlined]",
-      " [4] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "   @ Base ./loading.jl:1428"
-     ]
-    }
-   ],
-   "source": [
-    "function fu3n()\n",
-    "    \n",
-    "    if false\n",
-    "    \n",
-    "        va = 0\n",
-    "        \n",
-    "    end\n",
-    "    \n",
-    "    for _ in 1:0\n",
-    "\n",
-    "        va = 1\n",
-    "\n",
-    "    end\n",
-    "    \n",
-    "    va\n",
-    "    \n",
-    "end\n",
-    "\n",
-    "fu3n()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6bc35806-c90f-40cc-9b50-b5cbaa8ec94e",
-   "metadata": {},
-   "source": [
-    "Accessing is not the same as changing.\n",
-    "Changing `va` requires it to be made;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "cfc667d0-630b-4289-bc5e-5316c7a6268b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "fu4b (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "function fu4b(bo)\n",
+    "function fu3(bo, n)\n",
     "    \n",
     "    if bo\n",
     "    \n",
@@ -259,7 +156,7 @@
     "        \n",
     "    end\n",
     "    \n",
-    "    for _ in 1:2\n",
+    "    for _ in 1:n\n",
     "\n",
     "        va += 1\n",
     "\n",
@@ -272,8 +169,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "69c80006-0aea-44e7-b4d0-30afa82eaa74",
+   "execution_count": 5,
+   "id": "60705edd-f7c1-4659-880c-b57d6396bc3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fu3(true, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "60852cd4-0471-4708-a869-f01d88c77200",
    "metadata": {},
    "outputs": [
     {
@@ -284,10 +202,10 @@
       "UndefVarError: va not defined",
       "",
       "Stacktrace:",
-      " [1] fu4b(bo::Bool)",
-      "   @ Main ./In[15]:11",
+      " [1] fu3(bo::Bool, n::Int64)",
+      "   @ Main ./In[4]:11",
       " [2] top-level scope",
-      "   @ In[16]:1",
+      "   @ In[6]:1",
       " [3] eval",
       "   @ ./boot.jl:368 [inlined]",
       " [4] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
@@ -296,28 +214,86 @@
     }
    ],
    "source": [
-    "fu4b(false)"
+    "fu3(false, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "5abcaedc-32f7-4a7d-836f-604940141f33",
+   "execution_count": 7,
+   "id": "5959015b-30a7-484c-875b-567715aaffa6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "fu4 (generic function with 1 method)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fu4b(true)"
+    "function fu4(bo, n)\n",
+    "    \n",
+    "    if bo\n",
+    "    \n",
+    "        va = 0\n",
+    "        \n",
+    "    end\n",
+    "    \n",
+    "    for _ in 1:n\n",
+    "\n",
+    "        va = 1\n",
+    "\n",
+    "    end\n",
+    "    \n",
+    "    va\n",
+    "    \n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f53c9295-f7cb-4655-ae83-50c04a937daf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fu4(true, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "17f07cb2-e447-4b52-8ee3-52f23283f2e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fu4(false, 1)"
    ]
   }
  ],
