--- a/code/learn/21.data_frame_each_function_barrier.ipynb
+++ b/code/learn/21.data_frame_each_function_barrier.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "d8a938e3-0311-4226-8291-d470661152f5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "using DataFrames"
+    "using DataFrames\n",
+    "using Tables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "c0dd4587-ce6f-49f2-b26e-a3bc7c975c02",
    "metadata": {},
    "outputs": [],
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "324d0cbd-e10c-420b-9053-5846a14b6dde",
    "metadata": {},
    "outputs": [
@@ -48,10 +49,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  2.083 ns (0 allocations: 0 bytes)\n",
-      "  85.063 ns (0 allocations: 0 bytes)\n",
-      "  79.631 ns (0 allocations: 0 bytes)\n",
-      "  153.169 ns (1 allocation: 48 bytes)\n"
+      "  2.125 ns (0 allocations: 0 bytes)\n",
+      "  104.766 ns (0 allocations: 0 bytes)\n",
+      "  75.309 ns (0 allocations: 0 bytes)\n",
+      "  148.237 ns (1 allocation: 48 bytes)\n"
      ]
     }
    ],
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "22de9ef8-8c42-4492-b11d-17de12e0b8f3",
    "metadata": {},
    "outputs": [
@@ -89,8 +90,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  12.750 μs (604 allocations: 20.44 KiB)\n",
-      "  17.916 μs (320 allocations: 11.11 KiB)\n"
+      "  12.625 μs (604 allocations: 20.44 KiB)\n",
+      "  18.750 μs (320 allocations: 11.11 KiB)\n"
      ]
     }
    ],
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "91c4d15a-926f-4ff5-ac92-bb64deb6154e",
    "metadata": {},
    "outputs": [
@@ -136,8 +137,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  23.000 μs (924 allocations: 35.13 KiB)\n",
-      "  24.750 μs (1020 allocations: 35.05 KiB)\n"
+      "  25.000 μs (924 allocations: 35.13 KiB)\n",
+      "  35.083 μs (1020 allocations: 35.05 KiB)\n"
      ]
     }
    ],
@@ -191,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "5c1c9aaf-b40c-41d5-91fb-1a8ba2dd9f7b",
    "metadata": {},
    "outputs": [
@@ -199,7 +200,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  2.958 μs (117 allocations: 6.70 KiB)\n"
+      "  3.062 μs (117 allocations: 6.70 KiB)\n"
      ]
     }
    ],
@@ -222,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "c4bb8e1b-59e8-4475-8346-2094693cf0ad",
    "metadata": {},
    "outputs": [
@@ -230,8 +231,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  2.009 μs (102 allocations: 4.88 KiB)\n",
-      "  1.983 μs (101 allocations: 4.89 KiB)\n"
+      "  2.032 μs (102 allocations: 4.88 KiB)\n",
+      "  2.079 μs (101 allocations: 4.89 KiB)\n"
      ]
     }
    ],
@@ -280,66 +281,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "79a26fa8-0b2b-402d-ad2c-eef32e191d9a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  22.792 μs (924 allocations: 35.13 KiB)\n",
-      "  24.791 μs (1020 allocations: 35.05 KiB)\n",
-      "MethodInstance for maid_mzi(::DataFrame)\n",
-      "  from maid_mzi(da) in Main at In[8]:3\n",
-      "Arguments\n",
-      "  #self#\u001b[36m::Core.Const(maid_mzi)\u001b[39m\n",
-      "  da\u001b[36m::DataFrame\u001b[39m\n",
-      "Locals\n",
-      "  @_3\u001b[33m\u001b[1m::Union{Nothing, Tuple{Tuple, Tuple}}\u001b[22m\u001b[39m\n",
-      "  @_4\u001b[36m::Int64\u001b[39m\n",
-      "  id_\u001b[36m::Vector{Union{Nothing, Int64}}\u001b[39m\n",
-      "  ma\u001b[91m\u001b[1m::Matrix\u001b[22m\u001b[39m\n",
-      "  @_7\u001b[36m::Int64\u001b[39m\n",
-      "  b\u001b[91m\u001b[1m::Any\u001b[22m\u001b[39m\n",
-      "  a\u001b[91m\u001b[1m::Any\u001b[22m\u001b[39m\n",
-      "Body\u001b[36m::Nothing\u001b[39m\n",
-      "\u001b[90m1 ─\u001b[39m %1  = Main.maid(da)\u001b[91m\u001b[1m::Tuple{Matrix, Vector{Union{Nothing, Int64}}}\u001b[22m\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m %2  = Base.indexed_iterate(%1, 1)\u001b[36m::Core.PartialStruct(Tuple{Matrix, Int64}, Any[Matrix, Core.Const(2)])\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m       (ma = Core.getfield(%2, 1))\n",
-      "\u001b[90m│  \u001b[39m       (@_4 = Core.getfield(%2, 2))\n",
-      "\u001b[90m│  \u001b[39m %5  = Base.indexed_iterate(%1, 2, @_4::Core.Const(2))\u001b[36m::Core.PartialStruct(Tuple{Vector{Union{Nothing, Int64}}, Int64}, Any[Vector{Union{Nothing, Int64}}, Core.Const(3)])\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m       (id_ = Core.getfield(%5, 1))\n",
-      "\u001b[90m│  \u001b[39m %7  = ma\u001b[91m\u001b[1m::Matrix\u001b[22m\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m %8  = Base.getindex(id_, 1)\u001b[33m\u001b[1m::Union{Nothing, Int64}\u001b[22m\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m %9  = Base.getindex(%7, Main.:(:), %8)\u001b[91m\u001b[1m::Vector\u001b[22m\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m %10 = ma\u001b[91m\u001b[1m::Matrix\u001b[22m\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m %11 = Base.getindex(id_, 2)\u001b[33m\u001b[1m::Union{Nothing, Int64}\u001b[22m\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m %12 = Base.getindex(%10, Main.:(:), %11)\u001b[91m\u001b[1m::Vector\u001b[22m\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m %13 = Main.zip(%9, %12)\u001b[91m\u001b[1m::Base.Iterators.Zip\u001b[22m\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m       (@_3 = Base.iterate(%13))\n",
-      "\u001b[90m│  \u001b[39m %15 = (@_3 === nothing)\u001b[36m::Bool\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m %16 = Base.not_int(%15)\u001b[36m::Bool\u001b[39m\n",
-      "\u001b[90m└──\u001b[39m       goto #4 if not %16\n",
-      "\u001b[90m2 ┄\u001b[39m %18 = @_3\u001b[91m\u001b[1m::Tuple{Tuple, Tuple}\u001b[22m\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m %19 = Core.getfield(%18, 1)\u001b[91m\u001b[1m::Tuple\u001b[22m\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m %20 = Base.indexed_iterate(%19, 1)\u001b[36m::Core.PartialStruct(Tuple{Any, Int64}, Any[Any, Core.Const(2)])\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m       (a = Core.getfield(%20, 1))\n",
-      "\u001b[90m│  \u001b[39m       (@_7 = Core.getfield(%20, 2))\n",
-      "\u001b[90m│  \u001b[39m %23 = Base.indexed_iterate(%19, 2, @_7::Core.Const(2))\u001b[36m::Core.PartialStruct(Tuple{Any, Int64}, Any[Any, Core.Const(3)])\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m       (b = Core.getfield(%23, 1))\n",
-      "\u001b[90m│  \u001b[39m %25 = Core.getfield(%18, 2)\u001b[91m\u001b[1m::Tuple\u001b[22m\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m       Main.string(a, b)\n",
-      "\u001b[90m│  \u001b[39m       (@_3 = Base.iterate(%13, %25))\n",
-      "\u001b[90m│  \u001b[39m %28 = (@_3 === nothing)\u001b[36m::Bool\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m %29 = Base.not_int(%28)\u001b[36m::Bool\u001b[39m\n",
-      "\u001b[90m└──\u001b[39m       goto #4 if not %29\n",
-      "\u001b[90m3 ─\u001b[39m       goto #2\n",
-      "\u001b[90m4 ┄\u001b[39m       return nothing\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use `maid`.\n",
     "\n",
@@ -378,19 +323,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "fe4ddfad-4e8e-40b3-8905-e8f8a3429e30",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  5.069 μs (218 allocations: 11.54 KiB)\n",
-      "  5.056 μs (217 allocations: 11.55 KiB)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use `Matrix` `zip` and `eachrow`.\n",
     "\n",
@@ -425,38 +361,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "a3cf8a41-ad18-4c2a-ab9b-9affc744cbf5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  5.083 μs (218 allocations: 11.54 KiB)\n",
-      "  5.062 μs (217 allocations: 11.55 KiB)\n",
-      "MethodInstance for maid_mazi(::DataFrame)\n",
-      "  from maid_mazi(ro_x_co_x_an) in Main at In[10]:3\n",
-      "Arguments\n",
-      "  #self#\u001b[36m::Core.Const(maid_mazi)\u001b[39m\n",
-      "  ro_x_co_x_an\u001b[36m::DataFrame\u001b[39m\n",
-      "Locals\n",
-      "  @_3\u001b[36m::Int64\u001b[39m\n",
-      "  id_\u001b[36m::Vector{Union{Nothing, Int64}}\u001b[39m\n",
-      "  ma\u001b[91m\u001b[1m::Matrix\u001b[22m\u001b[39m\n",
-      "Body\u001b[36m::Nothing\u001b[39m\n",
-      "\u001b[90m1 ─\u001b[39m %1 = Main.maid(ro_x_co_x_an)\u001b[91m\u001b[1m::Tuple{Matrix, Vector{Union{Nothing, Int64}}}\u001b[22m\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m %2 = Base.indexed_iterate(%1, 1)\u001b[36m::Core.PartialStruct(Tuple{Matrix, Int64}, Any[Matrix, Core.Const(2)])\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m      (ma = Core.getfield(%2, 1))\n",
-      "\u001b[90m│  \u001b[39m      (@_3 = Core.getfield(%2, 2))\n",
-      "\u001b[90m│  \u001b[39m %5 = Base.indexed_iterate(%1, 2, @_3::Core.Const(2))\u001b[36m::Core.PartialStruct(Tuple{Vector{Union{Nothing, Int64}}, Int64}, Any[Vector{Union{Nothing, Int64}}, Core.Const(3)])\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m      (id_ = Core.getfield(%5, 1))\n",
-      "\u001b[90m│  \u001b[39m %7 = Main.mazi(ma, id_)\u001b[36m::Core.Const(nothing)\u001b[39m\n",
-      "\u001b[90m└──\u001b[39m      return %7\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use `maid` with `Matrix` `zip` and `eachrow`.\n",
     "\n",
